welcome.lessons.welcome.methods.basics.Methods.scala.code
def goAndGet() {
	while (!estSurBiscuit())
	{ 
		avance()
		pas = pas +1 
		}
	prendBiscuit()

}
